fixed overflow I think

--- a/style.css
+++ b/style.css
@@ -11,6 +11,9 @@
 
 html {
 	height: 100%;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
 }
 
 body {
@@ -22,6 +25,7 @@ body {
   background-size: cover;
 
   width: 100%;
+  height: 100%;
   margin: 0;
 }
 
@@ -94,20 +98,24 @@ body {
 /* Contents */
 #contents {
 	text-align: center;
+	height: inherit;
+	width: inherit
+	
 }
 .text {
 	font-size: 3rem;
 	font-style: bold;
 	color: #F2F2F2;
 	font-weight: 400;
+	margin: 15px;
 }
 #shrimp {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	max-width: 50%;
-    height: auto;
-    width: auto\9; /* ie8 */
+	height: 60%;
+	padding-top: 15px;
+	padding-bottom: 15px;
 }
 
 
